--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 </head>
 <body>
 	<header>
-		<h1>
-			YO
-		</h1>
+		<div style="width: 370px; height: 550px; padding-top:10px; padding-bottom:10px;border: 3px solid ; text-align: center;background: #C0C0C0;margin-left: 425px; margin-top: 30px; background-color: white"> <FONT face="billabong"; size="20pt">Instagram</FONT><div><img src="inconnu.jpg" width="100px"; height="100px"; style="margin-top: 80px"></div></div>
 	</header>
 
 </body>
